# twitter-clone

./: .env  Cargo.toml  docker-compose.yaml  models.rs.md  readme.md
migrations/2022-01-21-205934_create_tables/: down.sql  up.sql
migrations/2022-01-21-205934_create_tweets/: down.sql  up.sql
migrations/2022-01-21-205940_create_likes/: down.sql  up.sql
migrations/2022-03-03-015524_create_users/: up.sql
migrations/2022-03-03-130031_create_users/: up.sql
src/: api_error.rs  db.rs  errors.rs  like.rs  main.rs  response.rs  routes.rs  schema.rs  server.rs  test.rs  tweet.rs  validate.rs
src/api/: tweets.rs
src/auth/: jwt.rs  mod.rs  model.rs  routes.rs  tests.rs
src/controllers/: like.rs  tweet.rs
src/hashtag/: model.rs  routes.rs
src/models/: like.rs  mod.rs  tweet.rs
src/services/: like.rs  tweet.rs
src/tweet/: model.rs  routes.rs  tests.rs
src/user/: mod.rs  model.rs  routes.rs  tests.rs
src/user_account/: model.rs  routes.rs
