[package]
name = "twitter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = "1.0.133"
serde_json = "1"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
uuid = { version = "=0.8.1", features = ["serde", "v4"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
log = "0.4"
lazy_static = "1.4"