[package]
name = "twitter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "=0.8.1", features = ["serde", "v4"] }
futures = "0.3.21"

# http server
actix-web = "4.0.1"
actix-cors = "0.6.0"
actix-web-httpauth = "0.6.0"

# json serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# database
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
lazy_static = "1.4"
validator = { version = "0.14.0", features = ["derive"] }

# logger
env_logger = "0.9.0"
log = "0.4"

# password encryption
rand = "0.8.5"
rust-argon2 = "1.0.0"

# json web token used for auth
jsonwebtoken = "8"
